force-app/main/default/objects/canon_app__Call__c/canon_app__Call__c.object-meta.xml
<CustomObject>
    <label>Call</label>
    <nameField>
        <displayFormat>Call-{0000000}-{MM}-{YYYY}</displayFormat>
        <label>Call Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>