force-app/main/default/objects/canon_app__Call__c/fields/canon_app__Account__c.field-meta.xml
<CustomField>
    <fullName>canon_app__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Calls</relationshipLabel>
    <relationshipName>Calls</relationshipName>
    <type>Lookup</type>
</CustomField>