force-app/main/default/objects/canon_app__Call__c/fields/canon_app__Call_Notes__c.field-meta.xml
<CustomField>
    <fullName>canon_app__Call_Notes__c</fullName>
    <inlineHelpText>Notes manually entered by user from the call.</inlineHelpText>
    <label>Call Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>