force-app/main/default/objects/canon_app__Call__c/fields/canon_app__Call_Status__c.field-meta.xml
<CustomField>
    <fullName>canon_app__Call_Status__c</fullName>
    <label>Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Ringing</fullName>
            </value>
            <value>
                <fullName>In-Progress</fullName>
            </value>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>No-Answer</fullName>
            </value>
            <value>
                <fullName>completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>