force-app/main/default/objects/canon_app__Call__c/fields/canon_app__Call_Transcript__c.field-meta.xml
<CustomField>
    <fullName>canon_app__Call_Transcript__c</fullName>
    <inlineHelpText>Stores a transcript of the call if the transcription service add on is enabled</inlineHelpText>
    <label>Call Transcript</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>