force-app/main/default/objects/canon_app__Call__c/fields/canon_app__Direction__c.field-meta.xml
<CustomField>
    <fullName>canon_app__Direction__c</fullName>
    <label>Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>