force-app/main/default/objects/canon_app__Call__c/fields/canon_app__Disposition__c.field-meta.xml
<CustomField>
    <fullName>canon_app__Disposition__c</fullName>
    <label>Disposition</label>
    <length>120</length>
    <type>Text</type>
</CustomField>