force-app/main/default/objects/canon_app__Call__c/fields/canon_app__Duration__c.field-meta.xml
<CustomField>
    <fullName>canon_app__Duration__c</fullName>
    <label>Duration</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>