force-app/main/default/objects/canon_app__Call__c/fields/canon_app__From__c.field-meta.xml
<CustomField>
    <fullName>canon_app__From__c</fullName>
    <label>From</label>
    <length>100</length>
    <type>Text</type>
</CustomField>