force-app/main/default/objects/canon_app__Call__c/fields/canon_app__Recording_Sid__c.field-meta.xml
<CustomField>
    <fullName>canon_app__Recording_Sid__c</fullName>
    <externalId>true</externalId>
    <label>Recording Sid</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>