force-app/main/default/objects/canon_app__Call__c/fields/canon_app__Recording_Url__c.field-meta.xml
<CustomField>
    <fullName>canon_app__Recording_Url__c</fullName>
    <label>Recording Url</label>
    <type>Url</type>
</CustomField>