force-app/main/default/objects/canon_app__Call__c/fields/canon_app__Timestamp__c.field-meta.xml
<CustomField>
    <fullName>canon_app__Timestamp__c</fullName>
    <inlineHelpText>When the call initially began ringing</inlineHelpText>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>