force-app/main/default/objects/canon_app__Call__c/fields/canon_app__User__c.field-meta.xml
<CustomField>
    <fullName>canon_app__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User Involved in the Call as a recipient or caller</description>
    <inlineHelpText>User Involved in the Call as a recipient or caller</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Calls</relationshipName>
    <type>Lookup</type>
</CustomField>