force-app/main/default/objects/canon_app__Call__c/listViews/canon_app__All.listView-meta.xml
<ListView>
    <fullName>canon_app__All</fullName>
    <columns>NAME</columns>
    <columns>canon_app__Contact__c</columns>
    <columns>canon_app__Lead__c</columns>
    <columns>canon_app__Timestamp__c</columns>
    <columns>canon_app__Direction__c</columns>
    <columns>canon_app__Disposition__c</columns>
    <columns>canon_app__Call_Status__c</columns>
    <columns>canon_app__Duration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>